# Context

./: .gitignore  AGENTS.README.snippet.md  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  agent-prompts.txt  plan.md
.claude/agents/: context-cli-agent.md  context-core-agent.md  context-debug-agent.md  context-devops-agent.md  context-docs-agent.md  context-git-agent.md  context-testing-agent.md  context-web-agent.md
.claude/commands/: context-apply.md  context-debug.md  context-pick-task.md
.githooks/: pre-commit
.github/agents/: context-cli-agent.md  context-core-agent.md  context-debug-agent.md  context-devops-agent.md  context-docs-agent.md  context-git-agent.md  context-testing-agent.md  context-web-agent.md
.github/workflows/: ci.yml
agents/: context-cli-agent.md  context-core-agent.md  context-devops-agent.md  context-docs-agent.md  context-git-agent.md  context-planner-agent.md  context-research-agent.md  context-web-agent.md
context-agent/: Cargo.toml
context-agent/src/: lib.rs
context-cli/: Cargo.toml
context-cli/src/: main.rs
context-cli/tests/: agent_doc_command.rs  cat_command.rs  debug_bundle_command.rs  find_command.rs  get_command.rs  ls_command.rs  project_command.rs  put_command.rs  rm_gc_command.rs  sync_command.rs  telemetry.rs  web_command.rs  web_dev_command.rs
context-core/: Cargo.toml
context-core/migrations/: 0001_init.sql
context-core/src/: lib.rs  sqlite.rs  sync.rs
context-core/tests/: migrations.rs  storage_sqlite.rs  sync.rs
context-plan/: Cargo.toml
context-plan/src/: main.rs
context-plan/tests/: agent_docs.rs  claude_agents.rs  copilot_agents.rs  workflows.rs
context-telemetry/: Cargo.toml
context-telemetry/src/: lib.rs
context-web/: Cargo.toml
context-web/src/: main.rs
docs/: agent-doc.md
docs/plan/: background-sync.md
docs/research/: background-sync.md
scripts/: runner.sh
