[package]
name = "context-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
context-core = { path = "../context-core" }
context-agent = { path = "../context-agent" }
context-telemetry = { path = "../context-telemetry" }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
