[package]
name = "context-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
serde_json = "1"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "migrate"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
